--- a/Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html
+++ b/Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html
@@ -138,27 +138,27 @@ Destapa cañerias zona sur burzaco - Como destapar un inodoro tapado sin sopapa
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Bolsa-de-asar-mercadona.html">Bolsa de asar mercadona </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-plomero-liquido.html">Destapa cañerias plomero liquido </a> 
+       <a href="../Servicios/Con-Que-Se-Destapa-El-Cantilde;o.html">Con Que Se Destapa El Caño </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Limpieza-De-Desagues.html">Limpieza De Desagues </a> 
+       <a href="../Servicios/Destapador-De-Inodoros.html">Destapador De Inodoros </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Para-Destrancar-Cantilde;erias.html">Para Destrancar Cañerias </a> 
+       <a href="../Servicios/Gusano-destapacaños-home-depot.html">Gusano destapacaños home depot </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,57 +221,57 @@ Destapa cañerias zona sur burzaco - Como destapar un inodoro tapado sin sopapa
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destape-De-Cañerias-en-Palermo.html">Destape De Cañerias en Palermo </a> 
+       <a href="../Servicios/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Con-Que-Destapo-Un-Bantilde;o.html">Con Que Destapo Un Baño </a> 
+       <a href="../Servicios/Harpic-destapacaños-inodoro.html">Harpic destapacaños inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Como-puedo-destapar-un-bantilde;o-muy-tapado.html">Como puedo destapar un baño muy tapado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Mejor-Destapador-De-Cañerias-en-Palermo.html">Mejor Destapador De Cañerias en Palermo </a> 
+       <a href="../Servicios/Plomeria-Destapar-Cañerias-en-Palermo.html">Plomeria Destapar Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Merclin-destapa-cañerias-opiniones.html">Merclin destapa cañerias opiniones </a> 
+       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Que-puedo-hacer-para-mejorar-Destapar-cantilde;erias-sin-romper.html">Que puedo hacer para mejorar Destapar cañerias sin romper </a> 
+       <a href="../Servicios/Para-que-sirve-el-alcohol-boricado.html">Para que sirve el alcohol boricado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-enfrentar-el-desafio-de-Limpiar-tuberia-con-bicarbonato-y-vinagre.html">Como enfrentar el desafio de Limpiar tuberia con bicarbonato y vinagre </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-bantilde;o-bien-tapado.html">Como destapar un baño bien tapado </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Remedio-casero-para-destapar-tuberias.html">Remedio casero para destapar tuberias </a> 
+       <a href="../Servicios/Destape-De-Desagues.html">Destape De Desagues </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapador-de-cañerias-casero.html">Destapador de cañerias casero </a> 
+       <a href="../Destapa-Cañerias/Remedio-casero-para-destapar-cañerias.html">Remedio casero para destapar cañerias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cloacas-caballito.html">Destapa cloacas caballito </a> 
+       <a href="../Servicios/Relieve-de-la-zona-norte-grande-de-chile.html">Relieve de la zona norte grande de chile </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-zona-sur.html">Destapaciones de cloacas zona sur </a> 
+       <a href="../Destapa-Cañerias/Destapa-Cañerias-Inodoro.html">Destapa Cañerias Inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
